2010-02-11  Kai Tietz  <kai.tietz@onevision.com>

	* include/process.h: Moved away into
	* crt/process.h: new loaction.
	* Makefile.am: Add crt/process.h header.

2010-02-10  Ozkan Sezer  <sezeroz@gmail.com>

	* include/winuser.h (CloseTouchInputHandle): New API missed in
	revision 1530.
	(GetTouchInputInfo): Likewise.

	* include/winuser.h (PBT_POWERSETTINGCHANGE): Define for
	_WIN32_WINNT >= 0x0600.

2010-02-10  Kai Tietz  <kai.tietz@onevision.com>

	* include/shlguid.h: Reduce required _WIN32_IE to >= 0x0500.
	This isn't really correct, but to make it compatible to commctrl.h
	we have to change it here, too.
	* include/shlobj.h: Likewise.
	* include/winuser.h (POWERBROADCAST_SETTING): New type.
	(PPOWERBROADCAST_SETTING): Likewise.
	(RegisterPowerSettingNotification): New API.
	(UnregisterPowerSettingNotification): Likewise.

2010-01-25  Mook <mook.gcc@gmail.com>

	* include/wincrypt.h: Comment out CERT_ALT_NAME_ENTRY::x400Address.

2010-01-24  NightStrike <NightStrike@gmail.com>

	* include/wincrypt.h: Update to w32api 3.11 upstream.
	* include/w32api.h: Update w32api compatibility version number to
	3.11.

2010-01-23  Jonathan Yong  <jon_y@users.sourceforge.net>

	* Makefile.am: Add _mingw_ddk.h install rule.
	* ddk/include/sdks/_mingw_ddk.h: Removed.
	* crt/sdks/_mingw_ddk.h.in: New.
	* defaults/generate.sh: Add defaults for _mingw_ddk.h.
	* defaults/include/sdks/_mingw_ddk.h: New.
	* Makefile.in: Regenerated.
	* configure: Regenerated.

2010-01-18  Roland Schwingel  <roland.schwingel@onevision.com>

	* include/winternl.h (NtQueryInformationFile): Declare
	function.
	(NTQueryObject): Likewise.
	(FILE_INFORMATION_CLASS): Filled with all known definitions.
	(FILE_ALL_INFORMATION): Define struct.
	(FILE_PIPE_LOCAL_INFORMATION): Likewise.
	(FILE_MAILSLOT_SET_INFORMATION): Likewise.
	(FILE_MAILSLOT_QUERY_INFORMATION): Likewise.
	(FILE_ATTRIBUTE_TAG_INFORMATION): Likewise.
	(FILE_STREAM_INFORMATION): Likewise.
	(FILE_MODE_INFORMATION): Likewise.